samples/_failures_safe/1761145891_70085f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a9597c6.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_7a9597c6.c:144:13: error: expected declaration or statement at end of input
  144 |             dijkstra(graph, start);
      |             ^~~~~~~~
./samples/SAFE/__tmp_7a9597c6.c:144:13: error: expected declaration or statement at end of input
